apps/media/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - venus
      containers:
        - name: radarr
          image: docker.io/linuxserver/radarr:6.4.4
          ports:
            - containerPort: 7878
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /external/movies
              name: files
              subPath: movies
            - mountPath: /data/downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: files
          persistentVolumeClaim:
            claimName: files
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - venus
      containers:
        - name: sonarr
          image: docker.io/linuxserver/sonarr:4.0.20
          ports:
            - containerPort: 8989
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /external/series
              name: files
              subPath: series
            - mountPath: /data/downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: files
          persistentVolumeClaim:
            claimName: files
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - venus
      containers:
        - name: nzbget
          image: docker.io/linuxserver/nzbget:26.3.20261009
          ports:
            - containerPort: 6789
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbget-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  selector:
    app: nzbget
  ports:
    - port: 6789
      targetPort: 6789
      protocol: TCP
