apps/media/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.doink.co.za`)
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.doink.co.za`)
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nzbget.doink.co.za`)
      services:
        - name: nzbget
          port: 6789
  tls:
    secretName: nzbget-tls
